--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,7 @@
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mt-12 sm:mt-20  ">
             <div
-                class=" card scard-light border rounded-2xl bg-white text-black p-6 hover:hover    transition-shadow text-center">
+                class=" card card-light border rounded-2xl bg-white text-black p-6     transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/web.png" alt="Website icon">
                 <h2 class="text-lg font-semibold mb-2">Web Site</h2>
                 <p class="text-sm sm:text-base">I create responsive, fast, and visually appealing websites that deliver
@@ -219,7 +219,7 @@
             </div>
 
             <div
-                class="card-light border rounded-2xl bg-white text-black p-6 hover:hover  hover:bg-amber-600  transition-shadow text-center">
+                class=" card card-light border rounded-2xl bg-white text-black p-6     transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
                 <p class="text-sm sm:text-base">I develop intuitive, high-performance mobile apps that engage users
@@ -228,7 +228,7 @@
             </div>
 
             <div
-                class="card-light border rounded-2xl bg-white text-black p-6 hover:hover  hover:bg-amber-600  transition-shadow text-center">
+                class=" card card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">IOT</h2>
                 <p class="text-sm sm:text-base">I create innovative IoT systems that connect devices, enable
@@ -236,7 +236,7 @@
                 </p>
             </div>
             <div
-                class="card-light border rounded-2xl bg-white text-black p-6 hover:hover  hover:bg-amber-600  transition-shadow text-center">
+                class="card card-light border rounded-2xl bg-white text-black p-6   hover:bg-amber-600  transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">UI & UX</h2>
                 <p class="text-sm sm:text-base">I design clean, intuitive UI/UX interfaces that enhance user
