--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,8 @@
 
             </p>
             <button
-                class="class1 bg-orange-500 hover:bg-orange-700  rounded-4xl border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 "> <a href="img/Debabrata_Resume.pdf">Download CV</a> </button>
+                class="class1 bg-orange-500 hover:bg-orange-700  rounded-4xl border-black transition-colors text-lg sm:text-xl px-6 py-3 my-2 ">
+                <a href="img/Debabrata_Resume.pdf">Download CV</a> </button>
 
         </div>
 
@@ -175,20 +176,24 @@
             <div class="space-y-4 max-w-md mx-auto lg:mx-0">
                 <div>
                     <label class="block mb-1">Web Development</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="80" style="pointer-events: none;">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="80"
+                        style="pointer-events: none;">
                 </div>
                 <div>
                     <label class="block mb-1">APP Development</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="60" style="pointer-events: none;">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="60"
+                        style="pointer-events: none;">
                 </div>
 
                 <div>
                     <label class="block mb-1">IOT</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="85" style="pointer-events: none;">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="85"
+                        style="pointer-events: none;">
                 </div>
                 <div>
                     <label class="block mb-1">UI & Ux</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90" style="pointer-events: none;">
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90"
+                        style="pointer-events: none;">
                 </div>
             </div>
         </div>
@@ -210,16 +215,14 @@
         </p>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mt-12 sm:mt-20  ">
-            <div
-                class=" card card-light border rounded-2xl bg-white text-black p-6     transition-shadow text-center">
+            <div class=" card card-light border rounded-2xl bg-white text-black p-6     transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/web.png" alt="Website icon">
                 <h2 class="text-lg font-semibold mb-2">Web Site</h2>
                 <p class="text-sm sm:text-base">I create responsive, fast, and visually appealing websites that deliver
                     seamless user experiences across all devices.</p>
             </div>
 
-            <div
-                class=" card card-light border rounded-2xl bg-white text-black p-6     transition-shadow text-center">
+            <div class=" card card-light border rounded-2xl bg-white text-black p-6     transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
                 <p class="text-sm sm:text-base">I develop intuitive, high-performance mobile apps that engage users
@@ -227,8 +230,7 @@
                 </p>
             </div>
 
-            <div
-                class=" card card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center">
+            <div class=" card card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">IOT</h2>
                 <p class="text-sm sm:text-base">I create innovative IoT systems that connect devices, enable
@@ -264,9 +266,9 @@
             <button
                 class="border  dark:border-gray-600 p-2 rounded-xl bg-orange-500 text-white border-orange-500 transition-colors"
                 data-testid="button-filter-ux">Web Site</button>
-            <button
+            <!-- <button
                 class="border border-gray-300 dark:border-gray-600 p-2 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
-                data-testid="button-filter-web">APP</button>
+                data-testid="button-filter-web">APP</button> -->
             <button
                 class="border border-gray-300 dark:border-gray-600 p-2 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
                 data-testid="button-filter-web">AOT</button>
@@ -277,14 +279,14 @@
 
         <div class="  grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
             <div
-                class="class2 class31 card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
+                class=" card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
                 <p class="class4 text-sm ">I built a live weather checking website that shows real-time weather
                     updates, forecasts, and conditions.
 
                 </p>
-<!-- 
+                <!-- 
                 <div class="hidden  gap-2 p-4 ">
                     <div>
 
@@ -296,7 +298,7 @@
                     </div>
                 </div> -->
             </div>
-<!-- 
+            <!-- 
             <div
                 class="class2 class32  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
