--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,7 @@
 
         <div class="  grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
             <div
-                class=" card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
+                class=" show_project_card card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
                 <p class="class4 text-sm ">I built a live weather checking website that shows real-time weather
