--- a/src/index.html
+++ b/src/index.html
@@ -282,21 +282,18 @@
                 class=" show_project_card card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center max-h-[400px] ">
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
-                <p class="class4 text-sm ">I built a live weather checking website that shows real-time weather
+                <p class="project_p text-sm ">I built a live weather checking website that shows real-time weather
                     updates, forecasts, and conditions.
 
                 </p>
-                <!-- 
-                <div class="hidden  gap-2 p-4 ">
+                
+                <div class="show_project_card_hover gap-2 p-4 ">
                     <div>
 
-                        <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
+                        <button class="p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
                         <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
                     </div>
-                    <div class="my-2">
-                        <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
-                    </div>
-                </div> -->
+                </div>
             </div>
             <!-- 
             <div
@@ -307,17 +304,15 @@
                     functionality, and smooth performance.
 
                 </p>
-
-                <div class="hidden gap-2 p-4 ">
+                
+                <div class="gap-2 p-4 ">
                     <div>
 
-                        <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
+                        <button class="p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
                         <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
                     </div>
-                    <div class="my-2">
-                        <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
-                    </div>
                 </div>
+
             </div> -->
 
 
