--- a/src/index.html
+++ b/src/index.html
@@ -283,15 +283,14 @@
                 <img src="img/p_1.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
                 <p class="project_p text-sm ">I built a live weather checking website that shows real-time weather
-                    updates, forecasts, and conditions.
-
+                    updates, forecasts, and conditions. <br> <b>click Here</b>
                 </p>
                 
                 <div class="show_project_card_hover class5  gap-2 p-4 ">
                     <div>
 
-                        <button class="p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
-                        <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
+                        <button class="p_link p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
+                        <button class="p_link p-2 border rounded-xl"><a href="#">Live Demo</a></button>
                     </div>
                 </div>
             </div>
@@ -300,7 +299,8 @@
                 <img src="img/p_2.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">x-clone</h2>
                 <p class="project_p text-sm ">I built an X clone, recreating its core features with modern design,
-                    functionality, and smooth performance.
+                    functionality, and smooth performance. <br> <b>click Here</b>
+
 
 
                 </p>
@@ -308,8 +308,8 @@
                 <div class="show_project_card_hover class5  gap-2 p-4 ">
                     <div>
 
-                        <button class="p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
-                        <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
+                        <button class="p_link p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
+                        <button class="p_link p-2 border rounded-xl"><a href="#">Live Demo</a></button>
                     </div>
                 </div>
             </div>
