--- a/src/index.html
+++ b/src/index.html
@@ -289,8 +289,8 @@
                 <div class="show_project_card_hover class5  gap-2 p-4 ">
                     <div>
 
-                        <button class="p_link p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
-                        <button class="p_link p-2 border rounded-xl"><a href="#">Live Demo</a></button>
+                        <button onclick="showalert()"  class="p_link cursor-pointer p-2 border rounded-xl">Github 🔗</button>
+                        <button class="p_link cursor-pointer p-2 border rounded-xl"><a href="../Project/weather_checking_web/">Live Demo</a></button>
                     </div>
                 </div>
             </div>
@@ -308,8 +308,8 @@
                 <div class="show_project_card_hover class5  gap-2 p-4 ">
                     <div>
 
-                        <button class="p_link p-2 border rounded-xl"><a href="#">Github 🔗</a></button>
-                        <button class="p_link p-2 border rounded-xl"><a href="#">Live Demo</a></button>
+                        <button onclick="showalert()" class="p_link  cursor-pointer p-2 border rounded-xl">Github 🔗</button>
+                        <button onclick="showalert()" class="p_link cursor-pointer p-2 border rounded-xl"><!-- <a href="#"> -->Live Demo<!-- </a> --></button>
                     </div>
                 </div>
             </div>
