--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,7 @@
                     <div>
 
                         <button onclick="showalert()"  class="p_link cursor-pointer p-2 border rounded-xl">Github 🔗</button>
-                        <button class="p_link cursor-pointer p-2 border rounded-xl"><a href="../Project/weather_checking_web/">Live Demo</a></button>
+                        <button class="p_link cursor-pointer p-2 border rounded-xl"><a href="../Project/weather_checking_web/index.html">Live Demo</a></button>
                     </div>
                 </div>
             </div>
